<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LovingHeart</string>
	<string name="app_id">778772072139128</string>
	<string name="map_key">AIzaSyBguhqtGZ3xbzHkTNSh8AI5O3Wa62QXrTw</string>
    <string name="title_today">Today</string>
    <string name="title_me">Me</string>
    <string name="title_latest_activities">Latest Stories</string>
	<string name="title_popular_activities">Popular Stories</string>
	<string name="title_stories">Stories</string>
    <string name="action_settings">Settings</string>
	<string name="action_login">Login</string>

	<string name="action_nearby">Nearby</string>
	<string name="action_post">Post</string>
	<string name="action_reload">Reload</string>
	<string name="button_done">Done</string>
	<string name="action_ask_for_help">Ask for help</string>

	<string name="title_anonymous_activities">Anonymous Stories</string>

	<string name="story_upload_progress">Sending...</string>
	<string name="me_number_of_stories_shared">stories shared.</string>
	<string name="me_since_pre_text">Since</string>

	<string name="deed_of_number_of_people_prefix">Done</string>
	<string name="deed_of_number_of_people_prefix_short">Done</string>
	<string name="deed_of_number_of_people_post_time">time</string>
	<string name="deed_of_number_of_people_post_times">times</string>

	<string name="action_facebook_login">Facebook Login</string>
	<string name="facebook_login_activity">Facebook Login</string>
	<string name="action_facebook_login_loading">Facebook Login...</string>
	<string name="action_facebook_login_success">Facebook Login Success.</string>
	<string name="action_username_login_success">User login success.</string>

	<string name="space">&#160;</string>
	<string name="slash">/</string>
	<string name="comma">,</string>
	<string name="deed_content_be_the_first_one">Be the first one.</string>
	
	<string name="deed_content_done_credit">You will earn this graphic after you have done this.</string>
	<string name="stories_last_share_content_text_prefix">Last story shared</string>
	<string name="stories_last_share_date_text_prefix">Shared on</string>
	<string name="stories_last_share_inspired_by_text_prefix">From</string>

	<string name="login_email_login_email_hint">Email</string>
	<string name="login_email_login_password_hint">Password</string>
	<string name="login_email_login_password_confirm_hint">Password confirm</string>
	<string name="action_login_form_validate_failure">Email or password is invalid.</string>

	<string name="signup_form_username">Username</string>
	<string name="idea_caption_feature_idea">Feature Action Card</string>
	<string name="idea_caption_special_idea">Random Action Card</string>

	<string name="post_story_content_need_title">Story Content</string>
	<string name="post_story_content_need_message">Please type some words.</string>


	<string name="user_login_login">Login</string>
	<string name="ask_login_dialog_message">Before this, take you to login?</string>
	
	<!-- Settings -->
	<string name="setting_setting">Settings</string>
	<string name="setting_user_login_account_ask_logout">Logout</string>
	<string name="setting_user_login_account_title">Account</string>
	<string name="semicolon">:</string>
	<string name="setting_user_login_account_ask_login">Login</string>
	<string name="setting_about">About</string>
	<string name="setting_support_languages">Supporting Language</string>
	<string name="story_impact_views">views</string>
	<string name="idea_cards_browse_more">Explore more actions</string>
	<string name="good_deed_content_remind_me">Remind me</string>
	<string name="good_deed_content_do_it_now">Share story</string>
	<string name="post_story_loading_location">Loading location...</string>
	<string name="post_story_post">Post</string>
	<string name="me_graphic_gallery">Graphic Gallery</string>
	<string name="user_login_or">OR</string>
	<string name="user_login_not_a_member">Become a member today!</string>
	<string name="user_login_sign_up">Sign Up</string>
	<string name="user_login_promise">Nothing will be posted on your public/social wall without request.</string>
	<string name="user_signup_sign_up">Sign Up</string>
	<string name="ask_login_get_your_profile">Get your personal profile today!</string>
	<string name="ask_login_take_me_login">Take me to login</string>
	<string name="setting_acknowledgement_summary">Thanks to the communities for helping us.</string>
	<string name="setting_acknowledgement_title">Acknowledgement</string>
	<string name="post_story_pick_photo">Pick a photo</string>
	<string name="photo_picker_cancel">Cancel</string>
	<string name="photo_picker_graphic_gallery">Graphic Gallery</string>
	<string name="photo_picker_photo_library">Photo Library</string>
	<string name="photo_picker_take_photo">Take Photo</string>

	<!-- Activity -->
	<string name="activity_settings">Settings</string>
	<string name="activity_story">Story</string>
	<string name="activity_deed_content">Deed of Day</string>
	<string name="activity_deed_category">Kind Action</string>
	<string name="activity_story_edit">Edit Story</string>
	<string name="story_content_encourage_ratings">Encourage</string>
	<string name="submit">Submit</string>
	<string name="loading">Loading</string>
	<string name="story_content_story_impacts">Story Impacts</string>
	<string name="story_content_encourage_yet_empty">No encouragement points yet, be the first to encourage.</string>
	<string name="story_ratings_comment_hint">Leave message</string>

	<string name="story_content_ask_login_dialog_message">You must log in first, before you can send an encouragement.</string>
	<string name="idea_caption_latest_idea">Latest Action Card</string>
	
	<string name="setting_version_summary">Version Number</string>
	<string name="setting_version_title">Version</string>

	<string name="go">OK</string>
	<string name="cancel">Cancel</string>
	<string name="location_area_name_from">From </string>
	<string name="story_content_push_give_prefix">gave</string>
	<string name="story_content_push_give_post">stars.</string>
	<string name="story_content_push_msg_prefix">Said </string>
	<string name="story_content_push_msg_post">.</string>
	<string name="story_content_delete">Delete</string>
	<string name="story_content_delete_this_story">Are you sure you want to delete this story?</string>
	<string name="toast_error_message_try_again">Not successfully, try again later.</string>
	
	<string name="setting_feedback">Feedback</string>
	<string name="setting_bug_feedback_summary">Contact us and tell us what happen</string>
	<string name="setting_bug_feedback_title">Something goes wrong</string>

	<string name="setting_idea_feedback_summary">Share with us with your idea</string>
	<string name="setting_idea_feedback_title">Idea on your mind</string>
	<string name="user_profile_stories_list_header">Stories shared</string>
	<string name="user_profile_graphics_list_header">Graphics earned</string>
	<string name="activity_user_profile_label">User Profile</string>
	<string name="user_profile_graphics_empty_text">Haven\'t earned any of these yet.</string>
	<string name="user_profile_stories_empty_text">Haven\'t shared any of these yet.</string>
	<string name="post_story_photo_uploading">Photo uploading</string>

	<string name="navigation_drawer_open">Open</string>
	<string name="navigation_drawer_close">Close</string>
	<string name="setting_playing_music_summary">Play sound after data loaded</string>
	<string name="setting_playing_music_title">Sound effect</string>
	<string name="user_profile_positive_energy_report_title">Positive Energy Analytics</string>
	<string name="user_profile_positive_energy_report_description">Through the stories shared, by letting others read and touch, so as to gave you feedback.</string>
	<string name="user_profile_positive_energy_report_bottom">Let\'s spread a kind spirit and make the world a better place.</string>
	<string name="idea_category_select_item_all">All</string>

	<string name="good_deed_content_stories">Read Stories</string>
	
	<string name="setting_privacy_policy_title">Privacy Policy</string>
	<string name="setting_privacy_policy_summary">Read the privacy policy.</string>
	<string name="setting_idea_help_title">Support</string>
	<string name="setting_idea_help_summary">Read articles, contact us, or post your idea.</string>
	<string name="upgrade_premium_title">Upgrade to Premium</string>
	<string name="upgrade_premium_description">Because you get these exclusive benefits:</string>
	<string name="upgrade_premium_energy_report">Happiness Energy Report</string>
	<string name="upgrade_premium_write_private">Write private diary</string>
	<string name="upgrade_premium_monthly_button_unit">1 month</string>
	<string name="story_content_story_title_share">The story</string>
	<string name="billing_upgrade_to_premium">Upgrade to Premium</string>
	<string name="billing_premium_has_becom_member_thanks">Thanks for your subscriptions!</string>
	<string name="profile_tab_home">Profile</string>
	<string name="profile_tab_stories">Stories</string>
	<string name="profile_tab_collections">Collections</string>
	<string name="profile_tab_report">Report</string>
	<string name="upgrade_premium_year_button_unit">1 year</string>
	<string name="premium_lock_view_by_self_text">Upgrade to premium account, to see how much positive energy he have.</string>
	<string name="premium_lock_ask_part_1">Ask</string>
	<string name="premium_lock_ask_part_2">upgrading to a premium account.</string>
	<string name="share_billing_push_message">want to share with you the benefits of upgrade to premium.</string>
	<string name="upgrade_premium_no_add_network">Support an ad-free network</string>
	<string name="upgrade_to_premium_share_to">Share to</string>
	<string name="share_billing_button_sent">Sent!</string>
	<string name="idea_content_org_list_title_text">Support by</string>
	<string name="navigation_bottom_settings">Settings</string>
	<string name="navigation_bottom_getting_started">Getting Started</string>
	<string name="close">Close</string>
	<string name="getting_started_final_all_done">You are super!</string>
	<string name="getting_started_final_almost_done">Almost done.</string>
	<string name="intent_share_story">Share Story</string>
	<string name="menu_share_to_facebook">Share to Facebook</string>
	<string name="story_facebook_shared">Story published.</string>
	<string name="facebook_share_name_idea_card">- Kind Idea Card</string>
	<string name="ok">OK</string>

	<string name="setting_terms_of_use_summary">Read the terms of use.</string>
	<string name="setting_terms_of_use_title">Terms of Use</string>

	<string name="get_involved_idea_cards_browse">Unlock one from kind idea cards</string>
	<string name="graphic_picker_empty_text">You don\'t have any graphic yet, unlock one from king idea cards.</string>
	<string name="post_story_hint">How the story goes.</string>
	<string name="story_teller_anonymous">Anonymous</string>
	<string name="stories_empty_text">Cant\' find a story yet, be the first one.</string>
	<string name="post_story_status_anonymous_share">Anonymous share</string>
	<string name="post_story_status_private_story">Private story</string>
	<string name="navigation_bottom_qbon">Qbon</string>

	<string name="ask_share_story_dialog_message">Want to share this story to your Facebook friends?</string>
	<string name="auto_sharing">Ask to share</string>
	<string name="no_dont_ask_again">Don\'t ask again.</string>
	
	<string name="action_leaderboard">Leaderboard</string>
	<string name="title_top_participate">Top Participate</string>

</resources>
