<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/setting_setting" >

		<Preference
			android:key="setting_user_login"
		    android:summary="Account Info"
		    android:title="Account" />

		<SwitchPreference
			android:key="setting_playing_music"
			android:summary="@string/setting_playing_music_summary"
			android:title="@string/setting_playing_music_title" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/setting_support_languages" >
		<CheckBoxPreference
			android:key="setting_support_english"
			android:summary="Display English Content"
			android:title="English" />

		<CheckBoxPreference
			android:key="setting_support_chinese"
			android:summary="顯示中文內容"
			android:title="中文" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/setting_feedback" >

		<Preference
			android:key="setting_feedback_contact"
			android:summary="@string/setting_bug_feedback_summary"
			android:title="@string/setting_bug_feedback_title" />

		<Preference
			android:key="setting_feedback_idea"
			android:summary="@string/setting_idea_feedback_summary"
			android:title="@string/setting_idea_feedback_title" />

	</PreferenceCategory>



	<PreferenceCategory android:title="@string/setting_about" >

		<Preference
			android:key="setting_version_key"
			android:summary="@string/setting_version_summary"
			android:title="@string/setting_version_title" />

		<Preference
			android:key="setting_acknowledgement"
			android:summary="@string/setting_acknowledgement_summary"
			android:title="@string/setting_acknowledgement_title" />

	</PreferenceCategory>

</PreferenceScreen>