<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:dailykind="http://schemas.android.com/apk/res-auto">

	<item android:id="@+id/action_post"
	      android:orderInCategory="90"
	      android:icon="@drawable/ic_action_edit"
	      android:showAsAction="always"
	      dailykind:showAsAction="always"
	      android:title="@string/action_post" />

	<item android:id="@+id/action_getting_started"
	      android:title="@string/navigation_bottom_getting_started"
	      android:orderInCategory="95"
	      android:showAsAction="never" />

	<item android:id="@+id/action_reload"
	      android:orderInCategory="99"
	      android:icon="@drawable/ic_action_reload"
	      android:showAsAction="never"
	      dailykind:showAsAction="never"
	      android:title="@string/action_reload" />

	<item android:id="@+id/action_settings"
	      android:showAsAction="never"
	      android:title="@string/action_settings"
	      android:orderInCategory="110"
	      dailykind:showAsAction="never" />
</menu>
